Removed commented code

--- a/seeDb.ipynb
+++ b/seeDb.ipynb
@@ -115,17 +115,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# curs.execute(\"\"\"create or replace view married as \n",
-    "#                    select * from census where marital_status in (' Married-AF-spouse', ' Married-civ-spouse', ' Married-spouse-absent',' Separated');\n",
-    "#            create or replace view unmarried as \n",
-    "#                    select * from census where marital_status in (' Never-married', ' Widowed',' Divorced');\"\"\")\n",
-    "# con.commit()\n",
+    "curs.execute(\"\"\"create or replace view married as \n",
+    "                   select * from census where marital_status in (' Married-AF-spouse', ' Married-civ-spouse', ' Married-spouse-absent',' Separated');\n",
+    "           create or replace view unmarried as \n",
+    "                   select * from census where marital_status in (' Never-married', ' Widowed',' Divorced');\"\"\")\n",
+    "con.commit()\n",
     "\n",
-    "# curs.execute(\"select sex, avg(capital_gain) from married group by sex;\")\n",
-    "# target = curs.fetchall()\n",
+    "curs.execute(\"select sex, avg(capital_gain) from married group by sex;\")\n",
+    "target = curs.fetchall()\n",
     "\n",
-    "# curs.execute(\"select sex, avg(capital_gain) from unmarried group by sex;\")\n",
-    "# reference = curs.fetchall()\n",
+    "curs.execute(\"select sex, avg(capital_gain) from unmarried group by sex;\")\n",
+    "reference = curs.fetchall()\n",
     "\n",
     "# Piusha Gullapalli (pgullapalli@umass.edu)\n",
     "# Apoorva Saraswat (apoorvasaras@umass.edu)\n",
